--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         }
     ],
     "require": {
-        "craftcms/cms": "^3.0.0-RC1"
+        "craftcms/cms": "^3.0.0-RC1",
+        "embed/embed": "^3.3"
     },
     "repositories": [
         {
